--- a/LAB1/lab1.html
+++ b/LAB1/lab1.html
@@ -12,7 +12,7 @@
 	</head>
     <body>
       <p>new paragraph</p>
-      <p></p>
+      <p>I changed nothing.</p>
 		<p>My name is Nabila Akter. I am 15 years old. I go to Thomas a edison Highschool. I am here in this class becuase I had gotten assigned to this CTE. I am want to learn about web development and how its done while I am here. Web Development lets you design your own web and design it your self. Through the process of learning about web Development I would want to learn this. </p> 
 		<p>I think that each tag means a different font and a different size of each font. Each tag has a different tag that lets you speak tot the computer so it understands and the server will take you to the right place. </p>
 		</ul>
