--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  </ul> 
   </div> 
 <div class="header"> 
-  <h1> Thomas A. Edison HS</h1> 
+  <h1> Thomas A. Edison CTE HS</h1> 
   <h2> Web Design Academy </h2> 
   <h3> Portfolio 2021-2022 </h3> 
   <h4> Nabila Akter </h4> 
